v0.1 - resolving 'responsive' static problem with position:fixed plus overflow:auto

--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,19 @@ html, body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 100%;
+    min-height: 100%;
+    max-height: 100%;
 }
 
 
 .animation {
-    padding-top: 2%;
-    padding-bottom: 33%;
+    position: fixed;
+    overflow: auto;
+    height: 100%;
+    top: var(--nav-height);
+    bottom: 0;
+    right: 0;
+    left: 0;
     background: linear-gradient(-45deg, rgba(238, 119, 82, .97), rgba(214, 55, 116, .97), rgba(214, 55, 116, .97), rgba(214, 55, 116, .97), rgba(206, 36, 93, 0.6), rgba(36, 160, 206, .97), rgba(36, 160, 206, .97), rgba(36, 160, 206, .97), rgba(42, 197, 161, .97));
     background-size: 400% 400%;
     animation: gradient 40s ease infinite;
@@ -113,7 +119,6 @@ nav{
 
 
 header {
-    display: inline-block;
     width: 100%;
     margin: var(--nav-height) auto 20px auto;
     color: white;
@@ -138,7 +143,6 @@ h1 MyTag{
 }
 
 main {
-    display: inline-block;
     width: 100%;
     color: white;
 }
@@ -183,11 +187,11 @@ main {
 }
 
 footer {
-    display: inline-block;
     width: 100%;
     padding: 0 0 10px 0;
     text-align: center;
     font-size: 14px;
+    padding-bottom: 80px;
 }
 footer div {
     color: white;
